--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	font-family: Arial, sans-serif;
+	font-size: 10px;
+	line-height: 1.5;
+	color: #333;
+	background-color: #E5E5E5;
+}
+
 /* You can add global styles to this file, and also import other style files */
