--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,8 @@ body {
 	font-family: Arial, sans-serif;
 	font-size: 10px;
 	line-height: 1.5;
-	color: #333;
-	background-color: #E5E5E5;
+	color: #1a2e1a;
+	background-color: #f2f5f0;
 }
 
 /* You can add global styles to this file, and also import other style files */
